# EMPIRE-Libraries

./: CMakeLists.txt  Makefile  include_GCC.mk  include_ICC.mk
cppunit/: CMakeLists.txt
cppunit/includes/: CMakeLists.txt
cppunit/includes/cppunit/: TextTestResult.h
dataCreator/: AbstractDataCreator.cpp  AbstractDataCreator.h  DataFieldFunctions.h  FieldCreator.cpp  FieldCreator.h  FluxCreator.cpp  FluxCreator.h  mmsFSI.h  mmsFunctions.h
flann-1.7.1-src/: CMakeLists.txt  Makefile  run_cmake.sh
flann-1.7.1-src/src/cpp/flann/algorithms/: dist.h
flann-1.7.1-src/src/cpp/flann/util/: result_set.h
lapack-3.3.1/: .directory  Makefile  make.inc
lapack-3.3.1/CBLAS/: .directory  Makefile.in
lapack-3.3.1/CBLAS/lib/: .directory
lapack-3.3.1/CBLAS/src/: .directory
lapack-3.3.1/LAPACKE/: ._LICENSE  ._Makefile  ._README  ._include  ._make.gnu  ._make.gnu.complex_cpp  ._make.gnu.lc  ._make.gnu.uc.ilp64  ._make.inc  ._make.intel  ._make.intel.complex_structure  ._make.intel.lc.ilp64  ._make.intel.uc  ._src  ._testing  ._utils  make.inc
lapack-3.3.1/LAPACKE/include/: ._lapacke.h  ._lapacke_config.h  ._lapacke_utils.h
lapack-3.3.1/LAPACKE/src/: ._Makefile  ._lapacke_cbdsqr.c  ._lapacke_cbdsqr_work.c  ._lapacke_cgbbrd.c  ._lapacke_cgbbrd_work.c  ._lapacke_cgbcon.c  ._lapacke_cgbcon_work.c  ._lapacke_cgbequ.c  ._lapacke_cgbequ_work.c  ._lapacke_cgbequb.c  ._lapacke_cgbequb_work.c  ._lapacke_cgbrfs.c  ._lapacke_cgbrfs_work.c  ._lapacke_cgbrfsx.c  ._lapacke_cgbrfsx_work.c  ._lapacke_cgbsv.c  ._lapacke_cgbsv_work.c  ._lapacke_cgbsvx.c  ._lapacke_cgbsvx_work.c  ._lapacke_cgbsvxx.c  ._lapacke_cgbsvxx_work.c  ._lapacke_cgbtrf.c  ._lapacke_cgbtrf_work.c  ._lapacke_cgbtrs.c  ._lapacke_cgbtrs_work.c  ._lapacke_cgebak.c  ._lapacke_cgebak_work.c  ._lapacke_cgebal.c  ._lapacke_cgebal_work.c  ._lapacke_cgebrd.c  ._lapacke_cgebrd_work.c  ._lapacke_cgecon.c  ._lapacke_cgecon_work.c  ._lapacke_cgeequ.c  ._lapacke_cgeequ_work.c  ._lapacke_cgeequb.c  ._lapacke_cgeequb_work.c  ._lapacke_cgees.c  ._lapacke_cgees_work.c  ._lapacke_cgeesx.c  (+1677 more)
lapack-3.3.1/LAPACKE/testing/: ._Makefile  ._include  ._interface  ._utils
lapack-3.3.1/LAPACKE/testing/include/: ._test_utils.h
lapack-3.3.1/LAPACKE/testing/interface/: ._Makefile  ._cbdsqr_1.c  ._cbdsqr_2.c  ._cgbbrd_1.c  ._cgbcon_1.c  ._cgbrfs_1.c  ._cgbtrf_1.c  ._cgbtrs_1.c  ._cgebak_1.c  ._cgebal_1.c  ._cgebrd_1.c  ._cgebrd_3.c  ._cgebrd_4.c  ._cgebrd_5.c  ._cgecon_1.c  ._cgehrd_1.c  ._cgehrd_2.c  ._cgehrd_3.c  ._cgelqf_1.c  ._cgelqf_3.c  ._cgeqpf_1.c  ._cgeqrf_1.c  ._cgeqrf_3.c  ._cgerfs_1.c  ._cgetrf_1.c  ._cgetri_1.c  ._cgetrs_1.c  ._chbtrd_1.c  ._checon_1.c  ._chegst_1.c  ._cherfs_1.c  ._chetrd_1.c  ._chetrd_2.c  ._chetrd_3.c  ._chetrf_1.c  ._chetri_1.c  ._chetrs_1.c  ._chpcon_1.c  ._chpgst_1.c  ._chprfs_1.c  (+767 more)
lapack-3.3.1/LAPACKE/testing/utils/: ._Makefile  ._compare_complex_doubles.c  ._compare_complex_floats.c  ._compare_doubles.c  ._compare_floats.c
lapack-3.3.1/LAPACKE/utils/: ._Makefile  ._lapacke_c_nancheck.c  ._lapacke_cgb_nancheck.c  ._lapacke_cgb_trans.c  ._lapacke_cge_nancheck.c  ._lapacke_cge_trans.c  ._lapacke_cgg_nancheck.c  ._lapacke_cgg_trans.c  ._lapacke_cgt_nancheck.c  ._lapacke_chb_nancheck.c  ._lapacke_chb_trans.c  ._lapacke_che_nancheck.c  ._lapacke_che_trans.c  ._lapacke_chp_nancheck.c  ._lapacke_chp_trans.c  ._lapacke_chs_nancheck.c  ._lapacke_chs_trans.c  ._lapacke_cpb_nancheck.c  ._lapacke_cpb_trans.c  ._lapacke_cpf_nancheck.c  ._lapacke_cpf_trans.c  ._lapacke_cpo_nancheck.c  ._lapacke_cpo_trans.c  ._lapacke_cpp_nancheck.c  ._lapacke_cpp_trans.c  ._lapacke_cpt_nancheck.c  ._lapacke_csp_nancheck.c  ._lapacke_csp_trans.c  ._lapacke_cst_nancheck.c  ._lapacke_csy_nancheck.c  ._lapacke_csy_trans.c  ._lapacke_ctb_nancheck.c  ._lapacke_ctb_trans.c  ._lapacke_ctf_nancheck.c  ._lapacke_ctf_trans.c  ._lapacke_ctp_nancheck.c  ._lapacke_ctp_trans.c  ._lapacke_ctr_nancheck.c  ._lapacke_ctr_trans.c  ._lapacke_d_nancheck.c  (+109 more)
ticpp/: CMakeLists.txt  ticpp.h  tinyxml.h
